--- a/resources/assets/vsvillage/lang/de.json
+++ b/resources/assets/vsvillage/lang/de.json
@@ -1,2 +1,8 @@
 {
+    "item-creature-humanoid-villager-male-soldier": "Soldat (männlich)",
+    "item-creature-humanoid-villager-female-soldier": "Soldat (weiblich)",
+    "item-creature-humanoid-villager-male-smith": "Schmied (männlich)",
+    "item-creature-humanoid-villager-female-smith": "Schmied (weiblich)",
+    "item-creature-humanoid-villager-male-farmer": "Bauer (männlich)",
+    "item-creature-humanoid-villager-female-farmer": "Bauer (weiblich)"
 }
