--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -7,6 +7,8 @@
     "item-creature-humanoid-villager-female-farmer": "Farmer (female)",
     "item-creature-humanoid-villager-male-shepherd": "Shepherd (male)",
     "item-creature-humanoid-villager-female-shepherd": "Shepherd (female)",
+    "item-creature-humanoid-villager-male-mayor": "Mayor (male)",
+    "item-creature-humanoid-villager-female-mayor": "Mayor (female)",
 
     "quest-select-title": "Quest offers",
     "button-cancel": "Cancel",
@@ -15,19 +17,22 @@
     "no-quest-available-desc": "I currently don't need your help with anything.",
     "no-quest-active-desc": "I don't remember having any open contracts with you.",
 
-    "quest-gather20MeatFor8FlaxSeeds-title": "There is no protein in flax fibre",
-    "quest-gather20MeatFor8FlaxSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you 8 flax seeds in return.",
-    "quest-gather20MeatFor8FlaxSeeds-obj": "Gathered meat: {0}/20",
-    "quest-gather20MeatFor8ParsnipSeeds-title": "There is no protein in parsnips",
-    "quest-gather20MeatFor8ParsnipSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you 8 parsnip seeds in return.",
-    "quest-gather20MeatFor8ParsnipSeeds-obj": "Gathered meat: {0}/20",
-    "quest-gather20MeatFor8TurnipSeeds-title": "There is no protein in turnip fibre",
-    "quest-gather20MeatFor8TurnipSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you 8 turnip seeds in return.",
-    "quest-gather20MeatFor8TurnipSeeds-obj": "Gathered meat: {0}/20",
-    "quest-kill15DriftersFor3Gears-title": "Shivers from another world",
-    "quest-kill15DriftersFor3Gears-desc": "The woods simply aren't safe anymore. Drifters are everywhere. If you could clear the surrounding area by killing 15 drifters, we could pay you a fair price.",
-    "quest-kill15DriftersFor3Gears-obj": "Killed drifters: {0}/15",
-    "quest-kill3NightmareDriftersFor5Gears-title": "The growling from the unspeakable depths",
-    "quest-kill3NightmareDriftersFor5Gears-desc": "We can no longer extract minerals from the mountains because of the creatures that lurk in the caves deep down below. We would be willing to pay a generous price for anyone helping to clear the depths by killing 3 nightmare drifters.",
-    "quest-kill3NightmareDriftersFor5Gears-obj": "Killed nightmare drifters: {0}/3"
+    "quest-gather20MeatFor4FlaxSeeds-title": "There is no protein in flax fibre",
+    "quest-gather20MeatFor4FlaxSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
+    "quest-gather20MeatFor4FlaxSeeds-obj": "Gathered meat: {0}/20",
+    "quest-gather20MeatFor4ParsnipSeeds-title": "There is no protein in parsnips",
+    "quest-gather20MeatFor4ParsnipSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
+    "quest-gather20MeatFor4ParsnipSeeds-obj": "Gathered meat: {0}/20",
+    "quest-gather20MeatFor4TurnipSeeds-title": "There is no protein in turnip fibre",
+    "quest-gather20MeatFor4TurnipSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some in return.",
+    "quest-gather20MeatFor4TurnipSeeds-obj": "Gathered meat: {0}/20",
+    "quest-kill6WolvesFor2Gears-title": "Protect the cattle",
+    "quest-kill6WolvesFor2Gears-desc": "The wolves are loosing their respect for fire. They are getting closer and closer to the cattle I am herding. I can compensate you if you fend them off.",
+    "quest-kill6WolvesFor2Gears-obj": "Killed wolves: {0}/6",
+    "quest-kill30DriftersFor3Gears-title": "Shivers from another world",
+    "quest-kill30DriftersFor3Gears-desc": "The woods simply aren't safe anymore. Drifters are everywhere. If you could clear the surrounding area from drifters, we could pay you a fair price.",
+    "quest-kill30DriftersFor3Gears-obj": "Killed drifters: {0}/30",
+    "quest-kill8NightmareDriftersFor5Gears-title": "The growling from the unspeakable depths",
+    "quest-kill8NightmareDriftersFor5Gears-desc": "We can no longer extract minerals from the mountains because of the creatures that lurk in the caves deep down below. We would be willing to pay a generous price for anyone helping to clear the depths from nightmare drifters.",
+    "quest-kill8NightmareDriftersFor5Gears-obj": "Killed nightmare drifters: {0}/8"
 }
