add new quest for smith

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -26,6 +26,9 @@
     "quest-gather20MeatFor4TurnipSeeds-title": "There is no protein in turnip fibre",
     "quest-gather20MeatFor4TurnipSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some in return.",
     "quest-gather20MeatFor4TurnipSeeds-obj": "Gathered meat: {0}/20",
+    "quest-gather20CharcoalFor3Gears-title": "The forge stays cold today",
+    "quest-gather20CharcoalFor3Gears-desc": "I want to produce some new iron tools but forgot to prepare the charcoal. Can you help me gather some coal for me? I could pay you.",
+    "quest-gather20CharcoalFor3Gears-obj": "Gathered charcoal: {0}/20",
     "quest-kill6WolvesFor2Gears-title": "Protect the cattle",
     "quest-kill6WolvesFor2Gears-desc": "The wolves are loosing their respect for fire. They are getting closer and closer to the cattle I am herding. I can compensate you if you fend them off.",
     "quest-kill6WolvesFor2Gears-obj": "Killed wolves: {0}/6",
