add more quests

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -23,15 +23,33 @@
     "quest-gather20MeatFor4ParsnipSeeds-title": "There is no protein in parsnips",
     "quest-gather20MeatFor4ParsnipSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
     "quest-gather20MeatFor4ParsnipSeeds-obj": "Gathered meat: {0}/20",
-    "quest-gather20MeatFor4TurnipSeeds-title": "There is no protein in turnip fibre",
+    "quest-gather20MeatFor4TurnipSeeds-title": "There is no protein in turnips",
     "quest-gather20MeatFor4TurnipSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some in return.",
     "quest-gather20MeatFor4TurnipSeeds-obj": "Gathered meat: {0}/20",
+    "quest-gather20MeatFor4CarrotSeeds-title": "There is no protein in carrots",
+    "quest-gather20MeatFor4CarrotSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
+    "quest-gather20MeatFor4CarrotSeeds-obj": "Gathered meat: {0}/20",
+    "quest-gather20MeatFor4OnionSeeds-title": "There is no protein in onions",
+    "quest-gather20MeatFor4OnionSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
+    "quest-gather20MeatFor4OnionSeeds-obj": "Gathered meat: {0}/20",
+    "quest-gather20MeatFor4SpeltSeeds-title": "There is no protein in grain",
+    "quest-gather20MeatFor4SpeltSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
+    "quest-gather20MeatFor4SpeltSeeds-obj": "Gathered meat: {0}/20",
+
     "quest-gather20CharcoalFor3Gears-title": "The forge stays cold today",
     "quest-gather20CharcoalFor3Gears-desc": "I want to produce some new iron tools but forgot to prepare the charcoal. Can you help me gather some coal for me? I could pay you.",
     "quest-gather20CharcoalFor3Gears-obj": "Gathered charcoal: {0}/20",
+    "quest-buy1BlackGuardSword-title": "Creating a weapon of great power",
+    "quest-buy1BlackGuardSword-desc": "If you hand me the materials as well as some payment for my work, I could create a weapon of exceptional quality for you.",
+    "quest-buy1BlackGuardSword-obj": "Gathered iron ingots: {0}/1\nGathered charcoal: {1}/1\nGathered rusty gears: {2}/5",
+
     "quest-kill6WolvesFor2Gears-title": "Protect the cattle",
     "quest-kill6WolvesFor2Gears-desc": "The wolves are loosing their respect for fire. They are getting closer and closer to the cattle I am herding. I can compensate you if you fend them off.",
     "quest-kill6WolvesFor2Gears-obj": "Killed wolves: {0}/6",
+    "quest-kill6FoxesFor1Gear-title": "Protect the chicken",
+    "quest-kill6FoxesFor1Gear-desc": "Recently a fox broke into my chicken coop and decimated my lifestock. I do not want this to happen again. If anyone is able to hunt down six of these foxes I would be willing to pay a gear for it.",
+    "quest-kill6FoxesFor1Gear-obj": "Killed foxes: {0}/6",
+
     "quest-kill30DriftersFor3Gears-title": "Shivers from another world",
     "quest-kill30DriftersFor3Gears-desc": "The woods simply aren't safe anymore. Drifters are everywhere. If you could clear the surrounding area from drifters, we could pay you a fair price.",
     "quest-kill30DriftersFor3Gears-obj": "Killed drifters: {0}/30",
