refactor workspace quests

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -61,16 +61,16 @@
     
     "quest-recruit1farmer-title": "More farmers on the fields",
     "quest-recruit1farmer-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more farmer to the village.",
-    "quest-recruit1farmer-obj": "Rusty gears: {0}/4\nFree beds: {1}/1\nWorkstations (1 quern per 2 farmers): {2}/1\nCozy spots near a campfire: {3}/1",
+    "quest-recruit1farmer-obj": "Rusty gears: {0}/4\nFree beds: {1}/1\nPlaced querns: {2}/1\nPlaced campfires: {3}/1",
     "quest-recruit1shepherd-title": "More shepherds caring for the cattle",
     "quest-recruit1shepherd-desc": "If you can provide shelter, a workplace  and a little bit of payment, I am able to recruit one more shepherd to the village.",
-    "quest-recruit1shepherd-obj": "Rusty gears: {0}/4\nFree beds: {1}/1\nPlaced troughs: {2}/1\nCozy spots near a campfire: {3}/1",
+    "quest-recruit1shepherd-obj": "Rusty gears: {0}/4\nFree beds: {1}/1\nPlaced troughs: {2}/1\nPlaced campfires: {3}/1",
     "quest-recruit1soldier-title": "More protectors for the village",
     "quest-recruit1soldier-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more soldier to the village.",
-    "quest-recruit1soldier-obj": "Rusty gears: {0}/8\nFree beds: {1}/1\nWorkstations (1 strawdummy per 3 soldiers): {2}/1\nCozy spots near a campfire: {3}/1",
+    "quest-recruit1soldier-obj": "Rusty gears: {0}/8\nFree beds: {1}/1\nPlaced strawdummies: {2}/1\nPlaced campfires: {3}/1",
     "quest-recruit1smith-title": "More smiths creating tools and weapons",
     "quest-recruit1smith-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit a smith to the village.",
-    "quest-recruit1smith-obj": "Rusty gears: {0}/6\nFree beds: {1}/1\nPlaced anvils: {2}/1\nCozy spots near a campfire: {3}/1",
+    "quest-recruit1smith-obj": "Rusty gears: {0}/6\nFree beds: {1}/1\nPlaced anvils: {2}/1\nPlaced campfires: {3}/1",
     "quest-foundvillage-start-title": "Civilization has been broken",
     "quest-foundvillage-start-desc": "Greetings, traveler. I have been searching the lands in hopes of finding someone capable of laying the foundation of a safe haven for anyone roaming the lands. If you proof that you can handle yourself in the wilds, I can gather a small group of nomads to follow your lead.",
     "quest-foundvillage-start-obj": "Gathered grain: {0}/32\nGathered vegetables: {1}/16\nGathered meat: {2}/8\nKilled drifters: {3}/30\nFree beds: {4}/3",
