--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -64,28 +64,28 @@
     
     "quest-recruit1farmer-title": "More farmers on the fields",
     "quest-recruit1farmer-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more farmer to the village.",
-    "quest-recruit1farmer-obj": "Rusty gears: {0}/4\nFree beds: {1}/1\nPlaced querns: {2}/1\nPlaced campfires: {3}/1",
+    "quest-recruit1farmer-obj": "Rusty gears: {0}/4",
     "quest-recruit1shepherd-title": "More shepherds caring for the cattle",
     "quest-recruit1shepherd-desc": "If you can provide shelter, a workplace  and a little bit of payment, I am able to recruit one more shepherd to the village.",
-    "quest-recruit1shepherd-obj": "Rusty gears: {0}/4\nFree beds: {1}/1\nPlaced troughs: {2}/1\nPlaced campfires: {3}/1",
+    "quest-recruit1shepherd-obj": "Rusty gears: {0}/4",
     "quest-recruit1soldier-title": "More protectors for the village",
     "quest-recruit1soldier-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more soldier to the village.",
-    "quest-recruit1soldier-obj": "Rusty gears: {0}/8\nFree beds: {1}/1\nPlaced strawdummies: {2}/1\nPlaced campfires: {3}/1",
+    "quest-recruit1soldier-obj": "Rusty gears: {0}/8",
     "quest-recruit1smith-title": "More smiths creating tools and weapons",
     "quest-recruit1smith-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit a smith to the village.",
-    "quest-recruit1smith-obj": "Rusty gears: {0}/6\nFree beds: {1}/1\nPlaced anvils: {2}/1\nPlaced campfires: {3}/1",
+    "quest-recruit1smith-obj": "Rusty gears: {0}/6",
     "quest-foundvillage-start-title": "Civilization has been broken",
     "quest-foundvillage-start-desc": "Greetings, traveler. I have been searching the lands in hopes of finding someone capable of laying the foundation of a safe haven for anyone roaming the lands. If you proof that you can handle yourself in the wilds, I can gather a small group of nomads to follow your lead.",
-    "quest-foundvillage-start-obj": "Gathered grain: {0}/32\nGathered vegetables: {1}/16\nGathered meat: {2}/8\nKilled drifters: {3}/30\nFree beds: {4}/3",
+    "quest-foundvillage-start-obj": "Gathered grain: {0}/32\nGathered vegetables: {1}/16\nGathered meat: {2}/8\nKilled drifters: {3}/30",
     "quest-foundvillage-1-title": "Collecting funds",
     "quest-foundvillage-1-desc": "You did not think this would be cheap, did you? Founding a village can be quite costly",
-    "quest-foundvillage-1-obj": "Rusty gears: {0}/64\nFree beds: {1}/1",
+    "quest-foundvillage-1-obj": "Rusty gears: {0}/64",
     "quest-foundvillage-2-title": "People have to eat",
     "quest-foundvillage-2-desc": "The amount of food you gathered so far is mediocre at best. To actually make people stay with you, they must not be worried about starvation.",
-    "quest-foundvillage-2-obj": "Gathered grain: {0}/128\nGathered vegetables: {1}/64\nGathered meat: {2}/32\nFree beds: {3}/2",
+    "quest-foundvillage-2-obj": "Gathered grain: {0}/128\nGathered vegetables: {1}/64\nGathered meat: {2}/32",
     "quest-foundvillage-3-title": "Enter the metal age",
     "quest-foundvillage-3-desc": "Being able to eat is one thing. Being able to create the tools, weapons and armor to achieve a decent life in this world is another.",
-    "quest-foundvillage-3-obj": "Gathered bronze ingots: {0}/32\nGathered charcoal: {1}/64\nGathered leather: {2}/32\nFree beds: {3}/1\nPlaced anvils: {4}/1",
+    "quest-foundvillage-3-obj": "Gathered bronze ingots: {0}/32\nGathered charcoal: {1}/64\nGathered leather: {2}/32",
     "quest-foundvillage-final-title": "Emerge from the ashes",
     "quest-foundvillage-final-desc": "More and more people gain hope that this outpost could actually be made to last. To really gain their trust, proof that even the strongest beings from the rustworld do not stand a chance against you.",
     "quest-foundvillage-final-obj": "Double headed drifters killed: {0}/1\nNightmare drifters killed: {1}/10\nSawblade locusts killed: {2}/5",
