--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -7,6 +7,8 @@
     "item-creature-humanoid-villager-female-farmer": "Farmer (female)",
     "item-creature-humanoid-villager-male-shepherd": "Shepherd (male)",
     "item-creature-humanoid-villager-female-shepherd": "Shepherd (female)",
+    "item-creature-humanoid-villager-male-herbalist": "Herbalist (male)",
+    "item-creature-humanoid-villager-female-herbalist": "Herbalist (female)",
     "item-creature-humanoid-villager-male-mayor": "Mayor (male)",
     "item-creature-humanoid-villager-female-mayor": "Mayor (female)",
 
