Braziers only burn when villagers ignite them

--- a/resources/assets/vsvillage/lang/de.json
+++ b/resources/assets/vsvillage/lang/de.json
@@ -22,5 +22,5 @@
     "block-workstation-mayor-*": "Werkbank (Bürgermeister)",
     "block-workstation-trader-*": "Werkbank (Händler)",
 
-    "block-brazier": "Feuerstelle"
+    "block-brazier-*": "Feuerstelle"
 }
